--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,12 +33,17 @@ dist.jar=${dist.dir}/GestorProyectos.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-8.0.20.jar=C:\\Users\\ANDRE\\OneDrive - Universidad Veracruzana\\5to Semestre\\P. construccion\\programas\\FXAppLifeForce\\libs\\mysql-connector-java-8.0.20.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${libs.junit_5.classpath}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}:\
+    ${file.reference.mysql-connector-java-8.0.20.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -51,7 +56,8 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_5.classpath}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
