--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,6 +34,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-j-8.1.0-javadoc.jar=libs\\mysql-connector-j-8.1.0-javadoc.jar
+file.reference.mysql-connector-java-8.0.20.jar=C:\\Users\\ANDRE\\OneDrive - Universidad Veracruzana\\5to Semestre\\P. construccion\\programas\\FXAppLifeForce\\libs\\mysql-connector-java-8.0.20.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -43,7 +44,8 @@ javac.classpath=\
     ${libs.junit_5.classpath}:\
     ${libs.junit_4.classpath}:\
     ${libs.hamcrest.classpath}:\
-    ${file.reference.mysql-connector-j-8.1.0-javadoc.jar}
+    ${file.reference.mysql-connector-j-8.1.0-javadoc.jar}:\
+    ${file.reference.mysql-connector-java-8.0.20.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
